# autom8

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  autom8_review.md  prompt.md  rustfmt.toml
.autom8/: state.json
.autom8/prds/: prd-unified-agent-display.json
.autom8/runs/: 20260122_195853_71dc2dde.json  20260122_205928_a3f5fc67.json  20260122_220335_e9d17661.json  20260122_221138_d18ae92d.json  20260122_222905_6072d831.json
.github/workflows/: lint.yml  release.yml  security.yml  test.yml
pdr/: SKILL.md
pdr_json/: SKILL.md
src/: archive.rs  claude.rs  completion.rs  config.rs  display.rs  error.rs  gh.rs  git.rs  knowledge.rs  lib.rs  main.rs  output.rs  prd.rs  progress.rs  prompt.rs  prompts.rs  runner.rs  self_test.rs  signal.rs  snapshot.rs  spec.rs  state.rs  test_utils.rs  worktree.rs
src/claude/: commit.rs  control.rs  improve.rs  mod.rs  permissions.rs  pr_review.rs  review.rs  runner.rs  spec.rs  stream.rs  types.rs  utils.rs
src/commands/: clean.rs  config.rs  default.rs  describe.rs  gui.rs  improve.rs  init.rs  list.rs  mod.rs  monitor.rs  pr_review.rs  projects.rs  resume.rs  run.rs  status.rs
src/gh/: branch.rs  context.rs  detection.rs  format.rs  mod.rs  pr.rs  template.rs  types.rs
src/gui/: animation.rs  app.rs  components.rs  mod.rs  theme.rs  typography.rs
src/monitor/: app.rs
src/output/: banner.rs  colors.rs  error.rs  header.rs  improve.rs  messages.rs  mod.rs  pr.rs  pr_review.rs  progress.rs  status.rs
src/process/: mod.rs  monitor.rs
src/tui/: app.rs  mod.rs  ui.rs
src/ui/: mod.rs
src/ui/gui/: animation.rs  app.rs  components.rs  config.rs  mod.rs  modal.rs  theme.rs  typography.rs
src/ui/shared/: mod.rs
src/ui/tui/: app.rs  mod.rs  views.rs
tasks/: prd-cli-responsiveness.md  prd-reviewer-agent.md  prd-unified-agent-display.json  prd-unified-agent-display.md  prd.json
