[package]
name = "autom8"
version = "0.2.0"
edition = "2021"
description = "CLI automation tool for orchestrating Claude-powered development"
authors = ["Louis"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
indicatif = "0.18"
dirs = "5"
terminal_size = "0.4"
toml = "0.8"
regex = "1"
ratatui = "0.30"
crossterm = "0.29"

[dev-dependencies]
tempfile = "3"
