[package]
name = "autom8-cli"
version = "0.3.0"
edition = "2021"
description = "CLI automation tool for orchestrating Claude-powered development"
authors = ["Louis"]
license = "MIT"
repository = "https://github.com/louisboilard/autom8"
homepage = "https://github.com/louisboilard/autom8"
documentation = "https://docs.rs/autom8-cli"
readme = "README.md"
keywords = ["cli", "automation", "claude", "ai", "development"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.88"

[[bin]]
name = "autom8"
path = "src/main.rs"

[lib]
name = "autom8"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
time = "0.3.47"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
indicatif = "0.18"
dirs = "5"
terminal_size = "0.4"
toml = "0.9"
regex = "1"
ratatui = "0.30"
crossterm = "0.29"
sha2 = "0.10"
hex = "0.4"
ctrlc = "3"
eframe = "0.30"
egui = "0.30"
egui_extras = { version = "0.30", features = ["all_loaders"] }
image = { version = "0.24", default-features = false, features = ["png"] }

[dev-dependencies]
tempfile = "3"
